[tool.poetry]
name = "anxvis"
version = "0.1.0"
description = "an ethereal audio visualizer"
authors = ["Lux Aliaga <lux@nixgoat.me>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
imageio = "^2.34.2"
imageio-ffmpeg = "^0.5.1"
numpy = "^1.26.4"
pillow-simd = "^9.0.0.post1"
pygame = "^2.5.2"
requests = "^2.32.3"
soundfile = "^0.12.1"
tqdm = "^4.66.4"

[tool.poetry.scripts]
anxvis = "anxvis.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
